# Languages

./: Readme.md
HelloWorld/: .gitignore
HelloWorld/Assembler/: a.out  helloworld  helloworld.s
HelloWorld/C/: hellowrld
HelloWorld/C++/: hellworld
HelloWorld/GO/: hellowrold  hellowroldWS
HelloWorld/Lua/: helloworld.lua
HelloWorld/Nim/: helloworld
HelloWorld/RUST/: Cargo.toml  helloworld
PerlinNoise/Javacsript_brower/: index.html  perlin.js
